--- a/mysite/templates/posts/list.html
+++ b/mysite/templates/posts/list.html
@@ -5,7 +5,7 @@
     <div class="col-12">
         <!-- 등록 버튼 -->
         <div>
-            <a href="{% url 'posts:create' %}" class="btn btn-primaty">등록</a>
+            <a href="{% url 'posts:create' %}" class="btn btn-primary">등록</a>
         </div>
         <!-- //등록 버튼 -->
     </div>
@@ -13,8 +13,8 @@
 <div class="row">
     <div class="col-12">
         <!-- 게시글 목록 -->
-         <div class="table-responsive">
-            <table class="table table-bordered mt-3">
+        <div class="table-responsive">
+            <table class="table table-bordered table-hover mt-3">
                 <thead>
                     <tr class="text-center">
                         <th>순번</th>
@@ -24,20 +24,28 @@
                         <th>수정일시</th>
                     </tr>
                 </thead>
+                <tbody>
+                    {% for post in posts %}
+                    <tr>
+                        <td class="text-center">{{ forloop.counter }}</td>
+                        <td>
+                            <a href="{% url 'posts:read' post_id=post.id %}">
+                                {{ post.title }}
+                            </a>
+                        </td>
+                        <td class="text-center">{{ post.username }}</td>
+                        <td class="text-center">{{ post.created_at|date:"Y-m-d H:i" }}</td>
+                        <td class="text-center">{{ post.updated_at|date:"Y-m-d H:i" }}</td>
+                    </tr>
+                    {% empty %}
+                    <tr>
+                        <td colspan="5" class="text-center">등록된 게시글이 없습니다.</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
             </table>
-            <tbody>
-                {% for post in posts %}
-                <tr>
-                    <td class="text-center">{{ forloop.counter }}</td>
-                    <td><a href="{% url 'posts:read' post_id=post_id %}">{{ post.title }}</a></td>
-                    <td class="text-center">{{ post.username }}</td>
-                    <td class="text-center">{{ post.created_at | date:"Y-m-d H:i" }}</td>
-                    <td class="text-center">{{ post.updated_at | date:"Y-m-d H:i" }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-         </div>
-         <!-- //게시글 목록 -->
+        </div>
+        <!-- //게시글 목록 -->
     </div>
 </div>
 {% endblock %}
