--- a/mysite/templates/posts/create.html
+++ b/mysite/templates/posts/create.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-12">
         <!-- 게시글 등록 -->
-        <form id="createForm" method="POST">
+        <form id="createForm" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="card mb-3">
                 <div class="card-header">
@@ -48,6 +48,10 @@
                             {{ form.password.errors.0 }}
                         </div>
                         {% endif %}
+                    </div>
+                    <div>
+                        <label for="uploadFile" class="form.labal">첨부 파일</label>
+                        <input type="file" class="form-control" id="uploadFile" name="uploadFile" accept="image/*">
                     </div>
                 </div>
             </div>
