--- a/mysite/templates/posts/read.html
+++ b/mysite/templates/posts/read.html
@@ -14,6 +14,13 @@
                     등록일시: {{ post.created_at|date:"Y-m-d H:i" }} |
                     수정일시: {{ post.updated_at|date:"Y-m-d H:i" }}
                 </div>
+                
+                {% if post.filename %}
+                <div class="mb-3 text-muted">
+                    첨부파일: <a href="{% url 'posts:download' post.id %}">{{ post.original_filename }}</a>
+                </div>
+                {% endif %}
+                
                 <div class="mb-3">
                     {{ post.content|linebreaks }}
                 </div>
