--- a/mysite/templates/posts/update.html
+++ b/mysite/templates/posts/update.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-12">
         <!-- 게시글 등록 -->
-        <form id="createForm" method="POST">
+        <form id="updateForm" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="card mb-3">
                 <div class="card-header">
@@ -49,10 +49,41 @@
                         </div>
                         {% endif %}
                     </div>
+                    {% if form.instance.filename %}
+                    <div class="mb-3">
+                        <span>기존 파일:
+                            <a href="{% url 'posts:download' form.instance.id %}">
+                                {{ form.instance.original_filename }}
+                            </a>
+                        </span>
+                    </div>
+
+                    <div class="form-check">
+                        <input
+                            class="form-check-input"
+                            type="checkbox"
+                            name="deleteFile"
+                            id="deleteFile"
+                            value="true">
+                        <label class="form-check-label text-danger" for="deleteFile">
+                            파일 삭제
+                        </label>
+                    </div>
+                    {% endif %}
+
+                    <div>
+                        <label for="uploadFile" class="form-label">첨부 파일</label>
+                        <input
+                            type="file"
+                            class="form-control"
+                            id="uploadFile"
+                            name="uploadFile"
+                            accept="image/*">
+                    </div>
                 </div>
             </div>
             <div>
-                <button type="submit" class="btn btn-primary">등록</button>
+                <button type="submit" class="btn btn-primary">수정</button>
                 <a href="{% url 'posts:list' %}" class="btn btn-secondary">취소</a>
             </div>
         </form>
